assets/styles/_nav.scss
> nav {
	// The distance from the initial, centered logo until it is “stuck”.
	--nav--scroll: calc(
			(
				var(--vh--initial, 100vh)
				- var(--logo--height)
				- var(--tagline--height)
				- var(--margin) * 3
			)
			/ 2
		);

	// The collapsed/scrolled nav sticky offset.
	--nav--scroll--offset: calc(
			-100vh
			+ var(--logo--height--scaled)
			+ var(--tagline--height)
			+ var(--margin) * 3
		);

	display:         flex;
	flex-direction:  column;
	height:          calc(100vh + var(--nav--scroll));
	justify-content: space-between;
	padding:         var(--margin);
	position:        sticky;
	top:             calc(var(--nav--scroll--offset) - var(--nav--scroll));

	@include landscape {
		padding-left:  initial; // Grid gaps take over.
		padding-right: initial;
		top:           calc(-1 * var(--nav--scroll));
	}



	// The “logo”.
	> section:first-child {
		flex-shrink:   0;
		height:        var(--logo--height--scaled);
		margin-bottom: calc(var(--tagline--height) + var(--margin));
		margin-top:    var(--nav--scroll);
		position:      sticky;
		top:           var(--margin);

		@include landscape {
			margin-bottom: calc(100vh - var(--logo--height--scaled) - var(--tagline--height) - var(--margin) * 3);
		}

		> h1 {
			@extend %font--heldane--regular;

			--typography--leading: calc(5/6);
			--typography--size:    8.8rem;

			--transition--duration: 100ms;

			align-items:                start;
			display:                    flex;
			flex-direction:             column;
			position:                   absolute;
			transform-origin:           0px -0.025em; // Optical shift down, for “A“ overshoot.
			transform:                  scale(calc(1 - (1 - var(--logo--scale)) * var(--logo--scroll)));
			transition-delay:           calc(var(--color--transition) / 4), 0ms;
			transition-duration:        calc(var(--color--transition) / 2), var(--transition--duration);
			transition-property:        color, transform;
			transition-timing-function: linear;
			will-change:                transform;

			@include breakpoint(320) { --typography--size: 8rem; }
			@include breakpoint(568) { --typography--size: 7.2rem; }

			@include breakpoint(768) {
				--typography--size: 12.4rem;

				--transition--duration: 50ms; // Can go faster on desktop.
			}

			@include breakpoint(1024) { --typography--size: 13.2rem; }

			> a {
				@extend %link--text;

				// Counteract the scaling on the focus outline.
				--link--outline--override: calc((1 + (var(--logo--scale) * var(--logo--scroll))) * var(--link--outline));

				border-bottom:  initial; // Fix overlaps.
				border-top:     initial;
				color:          var(--color);
				margin-bottom:  initial;
				margin-top:     initial;
				pointer-events: none;
				position:       relative;
				transition:     color calc(var(--color--transition) / 2) linear;

				// Better click/tap target.
				&:before {
					content:        '';
					display:        block;
					height:         100%;
					pointer-events: auto;
					position:       absolute;
					width:          100%;
				}
			}



			// Logo kerning tweaks.
			[href="#art"] {
				.a { letter-spacing: -0.04em; } // Tighten the “Ar”.
			}

			[href="#media"] {
				.m { letter-spacing: -0.04em; } // “Me”.
				.d { letter-spacing:  0.02em; } // “di“.
			}

			[href="#science"] {
				.s { letter-spacing: -0.01em; } // “Sc“.
				.i { letter-spacing: -0.015em; } // “ie“.
				.n { letter-spacing: -0.02em; } // “nc“.
				.e { letter-spacing: -0.02em; } // “e.“
			}
		}
	}



	// The “tagline”.
	> section:last-child {
		bottom:        var(--margin);
		display:       flex;
		flex-shrink:   0;
		position:      sticky;

		> a {
			@extend %link--element;

			> p {
				--typography--size:    2.4rem;
				--typography--leading: 1;

				@include breakpoint(768) {
					--typography--size: 3.6rem;
				}
			}
		}
	}
}

